--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,10 +3,14 @@
 	<div class="container">
 		<div class="row">
 	    <div class="col">
-	      1 of 2
+	      <div class="home__main">
+					<h2 class="home__title">We Create Quality Product for Your Ideas</h2>
+					<h4 class="home__desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h4>
+					<button type="button" class="btn btn-primary btn__get btn__get--animated">GET STARTED</button>
+				</div>
 	    </div>
 	    <div class="col">
-	      2 of 2
+	      <img  class="home__img"src="/img/izufastlabs.png" alt="izufastlabs" height="42" width="42">
 	    </div>
 	  </div>
 	</div>
