--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,12 +1,47 @@
 .home{
-    background-image: linear-gradient(127deg, #8548fd, #7f4ef9 11%, #6568e8 55%, #5f6ee4 66%, #4b82d7);
+    // background-image: linear-gradient(127deg, #8548fd, #7f4ef9 11%, #6568e8 55%, #5f6ee4 66%, #4b82d7);
     width: 100%;
-    height: 911.3px;
+    height: 750px;
+    background-image: url(/img/bg-home.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: normal;
 }
 .nav-link{
     font-family: 'Titillium Web', sans-serif;
+    opacity: 0.8;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
     margin: 15px;
 }
 .navbar-nav{
   margin-left: 176px;
+}
+.home{
+  &__main{
+    margin-top: 180px;
+  }
+  &__title{
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 45px;
+    color: #fff;
+  }
+  &__desc{
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 16px;
+    color: #fff;
+    opacity: 0.75;
+    padding-top: 12px;
+    font-weight: 300;
+  }
+  &__img{
+    width: 100%;
+    height: 583px;
+    position: absolute;
+    margin-top: 166px;
+    margin-left: 55px;
+
+  }
 }
